--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>NpmCheck</title><link rel="shortcut icon" type=image/png href=./static/img/favicon.png><link href=/static/css/app.aba9af16422a91963824fbf621350d05.css rel=stylesheet></head><body><app></app><script type=text/javascript src=/static/js/manifest.75fe768af7ddf289c958.js></script><script type=text/javascript src=/static/js/vendor.f49aab1fa51dc297a1fc.js></script><script type=text/javascript src=/static/js/app.d209ed698d5bf158f3bf.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>NpmCheck</title><link rel="shortcut icon" type=image/png href=./static/img/favicon.png><link href=/static/css/app.aba9af16422a91963824fbf621350d05.css rel=stylesheet></head><body><app></app><script type=text/javascript src=/static/js/manifest.75fe768af7ddf289c958.js></script><script type=text/javascript src=/static/js/vendor.f49aab1fa51dc297a1fc.js></script><script type=text/javascript src=/static/js/app.d209ed698d5bf158f3bf.js></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-79165869-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</body></html>
